Modified Migrations/20240120070148_init.Designer.cs Modified Migrations/20240120070148_init.cs

--- a/BookShoppingCartMvcUI/appsettings.json
+++ b/BookShoppingCartMvcUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=RAVINDRA\\MSSQLSERVER01;Database=BookShoppingCartMvc;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server = DESKTOP-GSBBL5B\\SQLEXPRESS; Database = BookShopping; Trusted_Connection = true; TrustServerCertificate = true"
   },
   "Logging": {
     "LogLevel": {
